Adding the EasyMile logo to my profile slide

--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@ Character.UnicodeBlock.of("𝌆".codePointAt(0)) ◀▶ TAI_XUAN_JING_SYMBOLS
         <section>
             <div style="margin-left: 40px; margin-top: 1em; text-align: left" class="green">Frédéric Cabestre</div>
             <div style="margin-left: 40px; font-size: smaller; text-align: left" class="blue">@fcabestre</div>
-            <h2 style="margin-top: 2.5em; margin-bottom: 8em">Merci</h2>
+            <div style="margin-left: 40px; text-align: left"><img src="myAssets/images/easymile.png"></div>
+            <h2 style="margin-top: 1em; margin-bottom: 8em">Merci</h2>
         </section>
     </div>
     <!--span class="fragment blue">Wikipédia</span-->
